// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ToastContainer API 1`] = `
.c0 {
  position: fixed;
  bottom: 40px;
  width: 100%;
  z-index: 1;
}

.c1 {
  padding: 0 20px;
}

.c1 > * {
  max-width: 446px;
  margin: 8px auto;
}

<ToastContainer
  toasts={Array []}
>
  <styled-components__Fixed>
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "styled-components__Fixed-h3sw4-0",
            "isStatic": true,
            "lastClassName": "c0",
            "rules": Array [
              "
  position: fixed;
  bottom: 40px;
  width: 100%;
  z-index: 1; /* Note: fix for dialog portal */
",
            ],
          },
          "displayName": "styled-components__Fixed",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "styled-components__Fixed-h3sw4-0",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <div
        className="c0"
      >
        <styled-components__Container>
          <StyledComponent
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "styled-components__Container-h3sw4-1",
                  "isStatic": true,
                  "lastClassName": "c1",
                  "rules": Array [
                    "
  padding: 0 20px;

  > * {
    max-width: 446px;
    margin: 8px auto;
  }
",
                  ],
                },
                "displayName": "styled-components__Container",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "styled-components__Container-h3sw4-1",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <div
              className="c1"
            />
          </StyledComponent>
        </styled-components__Container>
      </div>
    </StyledComponent>
  </styled-components__Fixed>
</ToastContainer>
`;

exports[`Storyshots ToastContainer With state 1`] = `
.c0 {
  position: fixed;
  bottom: 40px;
  width: 100%;
  z-index: 1;
}

.c1 {
  padding: 0 20px;
}

.c1 > * {
  max-width: 446px;
  margin: 8px auto;
}

<ToastContainerWithState>
  <ToastContainer
    toasts={Array []}
  >
    <styled-components__Fixed>
      <StyledComponent
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "styled-components__Fixed-h3sw4-0",
              "isStatic": true,
              "lastClassName": "c0",
              "rules": Array [
                "
  position: fixed;
  bottom: 40px;
  width: 100%;
  z-index: 1; /* Note: fix for dialog portal */
",
              ],
            },
            "displayName": "styled-components__Fixed",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "styled-components__Fixed-h3sw4-0",
            "target": "div",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
      >
        <div
          className="c0"
        >
          <styled-components__Container>
            <StyledComponent
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "styled-components__Container-h3sw4-1",
                    "isStatic": true,
                    "lastClassName": "c1",
                    "rules": Array [
                      "
  padding: 0 20px;

  > * {
    max-width: 446px;
    margin: 8px auto;
  }
",
                    ],
                  },
                  "displayName": "styled-components__Container",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "styled-components__Container-h3sw4-1",
                  "target": "div",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
            >
              <div
                className="c1"
              />
            </StyledComponent>
          </styled-components__Container>
        </div>
      </StyledComponent>
    </styled-components__Fixed>
  </ToastContainer>
</ToastContainerWithState>
`;

exports[`Storyshots ToastContainer With toasts props 1`] = `
.c0 {
  position: fixed;
  bottom: 40px;
  width: 100%;
  z-index: 1;
}

.c1 {
  padding: 0 20px;
}

.c1 > * {
  max-width: 446px;
  margin: 8px auto;
}

<ToastContainer
  toasts={
    Array [
      Object {
        "children": "error children",
        "id": "id",
        "kind": "error",
      },
    ]
  }
>
  <styled-components__Fixed>
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "styled-components__Fixed-h3sw4-0",
            "isStatic": true,
            "lastClassName": "c0",
            "rules": Array [
              "
  position: fixed;
  bottom: 40px;
  width: 100%;
  z-index: 1; /* Note: fix for dialog portal */
",
            ],
          },
          "displayName": "styled-components__Fixed",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "styled-components__Fixed-h3sw4-0",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <div
        className="c0"
      >
        <styled-components__Container>
          <StyledComponent
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "styled-components__Container-h3sw4-1",
                  "isStatic": true,
                  "lastClassName": "c1",
                  "rules": Array [
                    "
  padding: 0 20px;

  > * {
    max-width: 446px;
    margin: 8px auto;
  }
",
                  ],
                },
                "displayName": "styled-components__Container",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "styled-components__Container-h3sw4-1",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <div
              className="c1"
            />
          </StyledComponent>
        </styled-components__Container>
      </div>
    </StyledComponent>
  </styled-components__Fixed>
</ToastContainer>
`;

exports[`Storyshots ToastContainer With two toasts 1`] = `
.c0 {
  position: fixed;
  bottom: 40px;
  width: 100%;
  z-index: 1;
}

.c1 {
  padding: 0 20px;
}

.c1 > * {
  max-width: 446px;
  margin: 8px auto;
}

<ToastContainer
  toasts={
    Array [
      Object {
        "children": "error children",
        "id": "id 1",
        "kind": "error",
      },
      Object {
        "children": "success children",
        "id": "id 2",
        "kind": "success",
      },
    ]
  }
>
  <styled-components__Fixed>
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "styled-components__Fixed-h3sw4-0",
            "isStatic": true,
            "lastClassName": "c0",
            "rules": Array [
              "
  position: fixed;
  bottom: 40px;
  width: 100%;
  z-index: 1; /* Note: fix for dialog portal */
",
            ],
          },
          "displayName": "styled-components__Fixed",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "styled-components__Fixed-h3sw4-0",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <div
        className="c0"
      >
        <styled-components__Container>
          <StyledComponent
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "styled-components__Container-h3sw4-1",
                  "isStatic": true,
                  "lastClassName": "c1",
                  "rules": Array [
                    "
  padding: 0 20px;

  > * {
    max-width: 446px;
    margin: 8px auto;
  }
",
                  ],
                },
                "displayName": "styled-components__Container",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "styled-components__Container-h3sw4-1",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <div
              className="c1"
            />
          </StyledComponent>
        </styled-components__Container>
      </div>
    </StyledComponent>
  </styled-components__Fixed>
</ToastContainer>
`;
